# urw-scroll-table

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml
examples/: demo.py  read_values_example.py
src/urw_scroll_table/: __init__.py  table.py  widgets.py
tests/: __init__.py  test_table.py
