[tool.poetry]
name = "urw-scroll-table"
version = "0.1.1"
description = "A scrollable and editable table widget for urwid terminal applications"
authors = ["Sergey Zhumatiy <sergzhum@gmail.com>"]
readme = "README.md"
packages = [{include = "urw_scroll_table", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
urwid = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
